--- a/interface/layout/index.html
+++ b/interface/layout/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="./layout/app.ts"></script>
+		<script type="module" src="./app.ts"></script>
 	</body>
 </html>
 
