--- a/interface/styles/index.css
+++ b/interface/styles/index.css
@@ -12,11 +12,11 @@
 	}
 
 	.menuButton {
-		@apply transparent-900-hover mx-3 mt-0 mb-3 flex h-20 w-20 flex-col items-center justify-center rounded-xl font-medium duration-200 ease-linear hover:text-gray-200;
+		@apply transparent-900-hover mx-3 mt-0 mb-3 flex h-20 w-20 flex-col items-center justify-center rounded-xl font-medium outline-none duration-200 ease-linear hover:text-gray-200 focus-visible:ring-4 focus-visible:ring-popup-magenta;
 	}
 
 	.selectedMenuButton {
-		@apply mx-3 mb-3 flex h-20 w-20 flex-col items-center justify-center rounded-xl bg-white font-medium !text-black duration-200 ease-linear hover:bg-gray-200;
+		@apply mx-3 mb-3 flex h-20 w-20 flex-col items-center justify-center rounded-xl bg-white font-medium !text-black outline-none duration-200 ease-linear hover:bg-gray-200 focus-visible:ring-4 focus-visible:ring-popup-magenta;
 	}
 
 	.select {
@@ -27,10 +27,7 @@
 		@apply transparent-900 transparent-input rounded-xl p-4 text-xl text-white outline-none duration-200 ease-linear;
 	}
 
-	.link {
-		@apply transparent-900-hover rounded-lg p-1 text-lg font-medium text-popup-blue duration-200 ease-linear hover:text-gray-200;
-	}
-
+	/* code element */
 	.code {
 		@apply transparent-800 mb-10 flex w-full flex-col rounded-2xl p-3;
 	}
@@ -39,8 +36,17 @@
 		@apply mx-auto rounded-2xl bg-gray-700 p-10 text-white;
 	}
 
+	/* edit element */
 	.edit {
 		@apply transparent-800 mb-5 flex w-full flex-row items-center justify-between rounded-xl p-5 text-left;
+	}
+
+	.blurCodes {
+		@apply blur-md delay-500 duration-200 ease-linear hover:blur-none;
+	}
+
+	.focusRing {
+		@apply outline-none focus-visible:ring-4 focus-visible:ring-popup-magenta;
 	}
 }
 
@@ -55,6 +61,7 @@ body {
 	line-height: normal;
 	font-family: system-ui, Arial;
 	user-select: none;
+	outline: none !important;
 }
 
 /* headings */
