--- a/interface/layout/index.html
+++ b/interface/layout/index.html
@@ -4,10 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Authme</title>
+		<link rel="stylesheet" href="./app.css">
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="./app.ts"></script>
+		<script type="module" src="./app.js"></script>
 	</body>
 </html>
 
