--- a/interface/styles/index.css
+++ b/interface/styles/index.css
@@ -29,7 +29,7 @@
 
 	/* code element */
 	.code {
-		@apply transparent-800 mb-10 flex w-full flex-col rounded-2xl p-3;
+		@apply transparent-800 flex w-full max-w-2xl flex-grow basis-1/3 flex-col rounded-2xl p-3;
 	}
 
 	.dialog {
@@ -61,6 +61,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	background-color: rgb(10, 10, 10);
 	/* background: url("../../images/mica.png"); */
 	line-height: normal;
 	font-family: system-ui, Arial;
